--- a/src/components/ExpenseItem.css
+++ b/src/components/ExpenseItem.css
@@ -9,18 +9,18 @@ h2 { margin: 15px; }
     padding: 15px;
 }
 .expense-item__description {
-
+    display: flex;
 }
 .expense-item__description h3 {
     font-size: 24px;
 }
 .expense-item__price {
+    margin-left: 15px;
     padding: 5px;
     background: white;
     color: blueviolet;
     border-radius: 5px;
     max-width: 90px;
-    margin-left: auto;
     text-align: center;
     font-weight: bold;
 }
